<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hours_avail">You have</string>
    <string name="hours_avail_as_of">hours available, as of</string>
    <string name="default_as_of_date">today</string>
    <string name="app_name">Leave Tracker</string>
    <string name="default_left_name">Sick Leave</string>
    <string name="default_center_name">Paid Leave</string>
    <string name="default_right_name">Comp Time</string>
    <string name="use_hours_alert_msg">Add to your used leave</string>
	<string name="quick_use_hours">Use Leave</string>
	<string name="quick_use_date">Change As Of Date</string>
	<string name="leave_category_position">pos</string>
	<string name="leave_pref_title">CATEGORY TITLE</string>
	<string name="leave_pref_accrual">LEAVE ACCRUAL</string>
	<string name="leave_pref_accrual_on">Leave accrues based on hours per year</string>
	<string name="leave_pref_accrual_off">Leave does not accrue for this category</string>
	<string name="leave_pref_used">USED</string>
	<string name="leave_pref_initial">INITIAL LEAVE HOURS</string>
	<string name="leave_pref_perYear">LEAVE HOURS PER YEAR</string>
	<string name="leave_pref_available">Hours of Leave Available</string>
	<string name="leave_pref_start">Start Date</string>
	<string name="leave_pref_start_sum">The date when you want your leave to begin accruing</string>
	<string name="leave_pref_interval">LEAVE INTERVAL</string>
	<string name="leave_interval">Leave Interval</string>
	<string name="leave_pref_interval_sum">How often your leave accrues</string>
	<string name="leave_pref_cap_type">LEAVE ACCRUAL LIMIT TYPE</string>
	<string name="leave_pref_cap_type_summary">Set the type of leave hours limiting you have</string>
	<string name="leave_pref_cap_val_carry">LEAVE CARRYOVER LIMIT</string>
	<string name="leave_pref_cap_val_summary_carry">Set the number of leave hours you can carry at the end of the year</string>
	<string name="leave_pref_cap_val_max">LEAVE HOURS MAX</string>
	<string name="leave_pref_cap_val_summary_max">Set max number of leave hours you can have</string>
	<string name="database_name">leavetracker.db</string>
	<string name="ItemLabelDate">DATE</string>
	<string name="ItemLabelHours">HOURS USED</string>
	<string name="ItemLabelHoursAdd">HOURS ADDED</string>
	<string name="ItemLabelNotes">NOTES</string>
	<string name="ItemLabelInterval">LEAVE INTERVAL</string>
	<string name="ItemLabelStartDate">START DATE</string>
	<string name="separator"> - </string>
	<string name="no_records">No items to display</string>
	<string name="load_msg">Loading...</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_history">Leave History</string>
	<string name="menu_edit">Edit</string>
	<string name="menu_delete">Delete</string>
	<string name="menu_add">Add or Use</string>
	<string name="menu_save">Save</string>
	<string name="menu_edit_cat">Edit Category</string>
	<string name="menu_add_cat">Add Category</string>
	<string name="menu_delete_cat">Delete Category</string>
	<string name="intent_catid">com.jbalboni.vacation.catID</string>
	<string name="intent_catname">com.jbalboni.vacation.catName</string>
	<string name="intent_itemid">com.jbalboni.vacation.itemID</string>
	<string name="cat_title">Leave Categories</string>
	<string name="saved_msg">Saved</string>
	<string name="added_msg">Added</string>
	<string name="deleted_msg">Deleted</string>
	<string name="error_msg">An error occurred</string>
	<string name="notes">Notes</string>
	<string name="new_user_pref">newUser</string>
	<string name="new_user_title">Initial Setup</string>
</resources>