<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<com.jbalboni.vacation.ui.DatePickerPreference
			android:key="startDate"
			android:title="@string/leave_pref_start"
			android:summary="@string/leave_pref_start_sum"
			android:dialogTitle="@string/leave_pref_start"
			android:defaultValue="" />

	<ListPreference
			android:key="leaveInterval"
			android:title="@string/leave_interval"
			android:summary="@string/leave_pref_interval_sum"
			android:defaultValue="Daily"
			android:entries="@array/leave_intervals"
			android:entryValues="@array/leave_intervals" />
			
	<Preference
			android:key="editCat1"
			android:title="" />
	<Preference
			android:key="editCat2"
			android:title="" />
	<Preference
			android:key="editCat3"
			android:title="" />
    
</PreferenceScreen>
