
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/categoryTitleLabel"
            style="@style/EditLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/leave_pref_title" />

        <EditText
            android:id="@+id/categoryTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:layout_below="@+id/categoryTitleLabel" 
			android:inputType="text" />
        
        <LinearLayout 
	        android:id="@+id/accrualLayout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
            android:layout_below="@+id/categoryTitle"
	        android:orientation="horizontal">
	        
	        <TextView
	            android:id="@+id/accrualLabel"
	            android:layout_gravity="bottom"
	            android:layout_width="wrap_content"
	            style="@style/EditLabelText"
	            android:layout_weight="2"
	            android:layout_height="wrap_content"
	            android:text="@string/leave_pref_accrual" />
	        <CheckBox android:id="@+id/accrual"
	            android:layout_gravity="bottom|right"
		        android:layout_width="wrap_content"
		        android:layout_weight="0"
		        android:layout_height="wrap_content"
		        android:onClick="onAccrualChecked"
		        android:checked="true" />
        </LinearLayout>
        
        <TextView
            android:id="@+id/hoursPerYearLabel"
            style="@style/EditLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accrualLayout"
            android:text="@string/leave_pref_perYear" />

        <EditText
            android:id="@+id/hoursPerYear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:layout_below="@+id/hoursPerYearLabel"
            android:inputType="numberDecimal" />
           
		<TextView
            android:id="@+id/initialHoursLabel"
            style="@style/EditLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hoursPerYear"
            android:text="@string/leave_pref_initial" />

        <EditText
            android:id="@+id/initialHours"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:layout_below="@+id/initialHoursLabel"
			android:inputType="text" />
			
		<TextView
            android:id="@+id/leaveCapTypeLabel"
            style="@style/EditLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/initialHours"
            android:text="@string/leave_pref_cap_type" />

        <Spinner
            android:id="@+id/leaveCapType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:layout_below="@+id/leaveCapTypeLabel" />
		
		<TextView
            android:id="@+id/leaveCapValLabel"
            style="@style/EditLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/leaveCapType"
            android:visibility="gone"
            android:text="@string/leave_pref_cap_val_max" />

        <EditText
            android:id="@+id/leaveCapVal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:layout_below="@+id/leaveCapValLabel"
			android:visibility="gone"
			android:inputType="numberDecimal" />

    </RelativeLayout>
